# pyscord-storage

./: .gitignore  CLAUDE.md  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: codeql-analysis.yml  python-app.yml
example/: C - libcurl.txt  Dart - http.txt  Go - Native.txt  HTTP.txt  Java - OkHttp.txt  Java - Unirest.txt  JavaScript - Fetch.txt  JavaScript - XHR.txt  JavaScript - jQuery.txt  NodeJs - Axios.txt  NodeJs - Native.txt  NodeJs - Request  NodeJs - Unirest.txt  PHP - HTTP_Request2.txt  PHP - cURL.txt  Python - Request.txt  cURL.txt
pyscord_storage/: __init__.py  _async.py  _cli.py  _sync.py
src/: test.py
src/pyscord_storage/: __init__.py
src/pyscord_storage.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/pyscord_storage_test.egg-info/: PKG-INFO  SOURCES.txt
tests/: __init__.py  test_pyscord_storage.py
