[project]
name = "pyscord-storage"
version = "1.0.0"
authors = [
  { name="Arter Tendean", email="arter@animemoe.us" },
]
description = "Free unlimited file hosting using Discord server"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://discord-storage.animemoe.us"
"Source" = "https://github.com/animemoeus/pyscord-storage"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"