[tool.poetry]
name = "pyscord-storage"
version = "2.0.2"
description = "Free unlimited file hosting using the Discord server"
license = "MIT"
authors = ["Arter Tendean <arter.tendean.07@gmail.com>"]
readme = "README.md"
homepage = "https://discord-storage.animemoe.us/"
repository = "https://github.com/animemoeus/pyscord-storage"
keywords = ["discord", "unlimited", "storage", "django"]
packages = [{include = "pyscord_storage"}]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.28.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
