[tool.poetry]
name = "pyscord-storage"
version = "3.0.0"
description = "Free unlimited file hosting using the Discord server"
license = "MIT"
authors = ["Arter Tendean <arter.tendean.07@gmail.com>"]
readme = "README.md"
homepage = "https://discord-storage-serverless.animemoe.us/"
repository = "https://github.com/animemoeus/pyscord-storage"
keywords = ["discord", "unlimited", "storage", "django"]
packages = [{include = "pyscord_storage"}]

[tool.poetry.dependencies]
python = "^3.8"
httpx = ">=0.24.0"


[tool.poetry.group.dev.dependencies]
pytest = ">=7.0.0"
pytest-asyncio = ">=0.21.0"

[tool.pytest.ini_options]
asyncio_mode = "auto"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
