[metadata]
name = pyscord-storage
version = 0.0.1
author = Arter Tendean
author_email = arter.tendean.07@gmail.com
description = Upload file to Discord server
long_description = file: README.md
long_description_content_type = text/markdown
url = https://api.animemoe.us/discord-storage/
project_urls =
    Bug Tracker = https://github.com/pypa/sampleproject/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
        requests >= 2.25.1

[options.packages.find]
where = src