[metadata]
name = pyscord-storage
version = 0.0.6
author = Arter Tendean
author_email = arter@animemoe.us
description = Upload file to Discord server
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/animemoeus/pyscord-storage
project_urls =
    Source = https://github.com/animemoeus/pyscord-storage
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
        requests >= 2.25.1

[options.packages.find]
where = src