[metadata]
name = pyscord-storage
version = 0.1.0
author = Arter Tendean
author_email = arter.tendean.07@gmail.com
description = Free unlimited file hosting using Discord server
long_description = file: README.md
long_description_content_type = text/markdown
url = https://discord-storage.animemoe.us
project_urls =
    Source = https://github.com/animemoeus/pyscord-storage
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
        requests >= 2.9.2

[options.packages.find]
where = src